Criado um formulario para a edição do cliente

--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -86,6 +86,10 @@
                 </tbody>
 
             </table>
+
+            <a class="hyperlink_tabela" href="@Url.Action("VisualizarCliente", "Clientes")">
+                <div class="botao_tabela">Adicionar Cliente</div>
+            </a>
         </div>
 
     </div>
