--- a/Views/Clientes/VisualizarCliente.cshtml
+++ b/Views/Clientes/VisualizarCliente.cshtml
@@ -8,7 +8,6 @@
     <title>Vidraçaria do Marcinho - Detalhes do Cliente</title>
 
     <!-- Bootstrap para estilização rápida -->
-
     <!-- Seus estilos -->
     <link rel="stylesheet" href="~/css/reset.css">
     <link rel="stylesheet" href="~/css/style.css">
@@ -17,62 +16,87 @@
 
     <div class="borda_superior"></div>
 
-    <div class="container mt-5">
-        <div class="card shadow-lg rounded-4">
-            <div class="card-header text-center bg-primary text-white rounded-top-4">
-                <h2 class="m-0">Detalhes do Cliente</h2>
+    <div class="formulario">
+        @using (@Html.BeginForm("CrudUsuario", "Clientes", FormMethod.Post, new { id = "form-crud-usuario" }))
+        {
+
+            @* Fazer isso em todos campos *@
+            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "nome-usuario texto-form" })
+
+            <br />
+            @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "nome-usuario-input input-box texto-form" } })
+            <br />
+
+            @* CPF *@
+            @Html.LabelFor(model => model.CPF, htmlAttributes: new { @class = "cpf-usuario texto-form" })
+
+            <br />
+            @Html.EditorFor(model => model.CPF, new { htmlAttributes = new { @class = "cpf-usuario-input input-box texto-form" } })
+            <br />
+            @* Telefone *@
+            @Html.LabelFor(model => model.Telefone, htmlAttributes: new { @class = "telefone-usuario texto-form" })
+
+            <br />
+            @Html.EditorFor(model => model.Telefone, new { htmlAttributes = new { @class = "telefone-usuario-input input-box texto-form" } })
+            <br>
+
+            <div class="endereco">
+                <div>
+                    @* Rua *@
+                    @Html.LabelFor(model => model.Rua, htmlAttributes: new { @class = "rua-usuario texto-form" })
+
+                    <br />
+                    @Html.EditorFor(model => model.Rua, new { htmlAttributes = new { @class = "rua-usuario-input input-box texto-form" } })
+                    <br>
+                </div>
+                <div>
+                    @* Numenro *@
+                    @Html.LabelFor(model => model.Numero, htmlAttributes: new { @class = "numero-usuario texto-form" })
+
+                    <br />
+                    @Html.EditorFor(model => model.Numero, new { htmlAttributes = new { @class = "numero-usuario-input input-box texto-form" } })
+                    <br>
+                </div>
             </div>
-            <div class="card-body p-4">
-                @Html.BeginForm("CrudUsuario", "Clientes", FormMethod.Post, new {id = "form-crud-usuario"}){
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        @* Fazer isso em todos campos *@
-                        @Html.LabelFor(model => model.Nome, htmlAttributes: new {@class = "nome-usuario"})
-                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new {@class = "nome-usuario-input" }})
-                    </div>
-                    <div class="col-md-6">
-                        <p><strong>CPF:</strong> @Model.CPF</p>
-                    </div>
+
+            <br />
+
+            <div class="endereco">
+                <div>
+                    @* Bairro *@
+                    @Html.LabelFor(model => model.Bairro, htmlAttributes: new { @class = "bairro-usuario texto-form" })
+
+                    <br />
+                    @Html.EditorFor(model => model.Bairro, new { htmlAttributes = new { @class = "bairro-usuario-input input-box texto-form" } })
+                    <br>
+                </div>
+                
+                <div>
+                    @* Cidade *@
+                    @Html.LabelFor(model => model.Cidade, htmlAttributes: new { @class = "cidade-usuario texto-form" })
+
+                    <br />
+                    @Html.EditorFor(model => model.Cidade, new { htmlAttributes = new { @class = "cidade-usuario-input input-box texto-form" } })
+                    <br>
                 </div>
 
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <p><strong>Telefone:</strong> @Model.Telefone</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p><strong>CEP:</strong> @Model.CEP</p>
-                    </div>
-                </div>
+                <div>
+                    @* CEP *@
+                    @Html.LabelFor(model => model.CEP, htmlAttributes: new { @class = "cep-usuario texto-form" })
 
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <label class="form-label">Rua</label>
-                        <input type="text" class="form-control" readonly value="@Model.Rua">
-                    </div>
-                    <div class="col-md-2">
-                        <label class="form-label">Número</label>
-                        <input type="text" class="form-control" readonly value="@Model.Numero">
-                    </div>
-                    <div class="col-md-4">
-                        <label class="form-label">Bairro</label>
-                        <input type="text" class="form-control" readonly value="@Model.Bairro">
-                    </div>
+                    <br />
+                    @Html.EditorFor(model => model.CEP, new { htmlAttributes = new { @class = "cep-usuario-input input-box texto-form" } })
+                    <br>
                 </div>
-
-                <div class="row mb-4">
-                    <div class="col-md-12">
-                        <label class="form-label">Cidade</label>
-                        <input type="text" class="form-control" readonly value="@Model.Cidade">
-                    </div>
-                </div>
-
-                <div class="text-center">
-                    <a href="@Url.Action("Index", "Clientes")" class="btn btn-secondary rounded-pill px-4">Voltar</a>
-                    <a href="@Url.Action("EditarCliente", "Clientes", new { cpf = @Model.CPF })" class="btn btn-warning rounded-pill px-4">Editar</a>
-                </div>
-                }
             </div>
-        </div>
+
+            <button type="submit" class="btn btn-primary rounded-pill px-4">Salvar</button>
+
+            <div class="text-center campo-de-texto">
+                <a href="@Url.Action("Index", "Clientes")" class="btn btn-secondary rounded-pill px-4">Voltar</a>
+                <a href="@Url.Action("EditarCliente", "Clientes", new { cpf = @Model.CPF })" class="btn btn-warning rounded-pill px-4">Editar</a>
+            </div>
+        }
     </div>
 
 </body>
