--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -88,6 +88,7 @@
 }
 
 .hyperlink_tabela{
+    font-size: 80%;
     color: inherit; /* herda a cor do elemento pai */
     text-decoration: none; /* remove o sublinhado */
 }
@@ -102,7 +103,36 @@
 
 
 
-/* Importar datatables */
-/* cdn.datatables.net/2.3.3/css/dataTables.dataTables.min.css
+.formulario {
+    padding: 2%;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    width: 80vw;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.3);
+    border-radius: 8px;
+}
 
-let table = new DataTable('#myTable'); */
+.input-box {
+    background-color: inherit;
+
+    height: 3vh;
+    field-sizing: content;
+    padding-right: 1vw;
+    
+    margin-left: 1vw;
+    margin-bottom: 1vw;
+
+    border: none;
+    border-bottom: 1px solid black;
+
+}
+
+.texto-form {
+    margin-top: 1vh;
+    color: dimgray;
+    font-size: 1.20vw;
+}
+
+.endereco {
+    display: inline-flex;
+}
