--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -24,7 +24,7 @@
     <!-- barra superior     -->
     <div class="borda_superior"></div>
 
-    <div class="botoes_line">
+    @* <div class="botoes_line">
         <!-- Botão para acessar clientes -->
         <div class="botao" id="botao_clientes">
             <img src="/images/user.png" alt="icone usuário" class="icons">
@@ -53,53 +53,53 @@
 
     <!-- painel para os clientes -->
     <div id="painel" class="painel">
-        <button class="fechar" id="fechar">X</button>
+        <button class="fechar" id="fechar">X</button> *@
 
-        <div class="painel_clientes">
+    <div class="painel_clientes">
 
-            <table id="tabelaClientes" class="display table">
-                <thead>
+        <table id="tabelaClientes" class="display table">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>CPF</th>
+                    <th>Telefone</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                @foreach (Cliente cliente in Model)
+                {
                     <tr>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Telefone</th>
-                        <th></th>
-                        <th></th>
+                        <td>@cliente.Nome</td>
+                        <td>@cliente.CPF</td>
+                        <td>@cliente.Telefone</td>
+                        <td>
+                            <a class="hyperlink_tabela" href="@Url.Action("VisualizarCliente", "Clientes", new { cpf = @cliente.CPF })">
+                                <div class="botao_tabela">Visualizar Cliente</div>
+                            </a>
+                        </td>
+                        <td>
+                            <a class="hyperlink_tabela" href="@Url.Action("DeleteUsuario", "Clientes", new { cpf = cliente.CPF })">
+                                <div class="botao_tabela">Remover</div>
+                            </a>
+                        </td>
                     </tr>
-                </thead>
-
-                <tbody>
-                    @foreach (Cliente cliente in Model)
-                    {
-                        <tr>
-                            <td>@cliente.Nome</td>
-                            <td>@cliente.CPF</td>
-                            <td>@cliente.Telefone</td>
-                            <td>
-                                <a class="hyperlink_tabela" href="@Url.Action("VisualizarCliente", "Clientes", new { cpf = @cliente.CPF })">
-                                    <div class="botao_tabela">Visualizar Cliente</div>
-                                </a>
-                            </td>
-                            <td>
-                                <a class="hyperlink_tabela" href="@Url.Action("DeleteUsuario", "Clientes", new { cpf = cliente.CPF })">
-                                    <div class="botao_tabela">Remover</div>
-                                </a>
-                            </td>
-                        </tr>
-                    }
+                }
 
 
-                </tbody>
+            </tbody>
 
-            </table>
+        </table>
 
-            <a class="hyperlink_tabela" href="@Url.Action("VisualizarCliente", "Clientes")">
-                <div class="botao_tabela">Adicionar Cliente</div>
-            </a>
-
-        </div>
+        <a class="hyperlink_tabela" href="@Url.Action("VisualizarCliente", "Clientes")">
+            <div class="botao_tabela">Adicionar Cliente</div>
+        </a>
 
     </div>
+
+    @*   </div> *@
     @section Scripts {
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
         <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
