--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -61,13 +61,13 @@
     }
 
 .painel_clientes {
-    width: 86vw;
-    height: 100%;
+/*    width: 86vw;*/
+/*    height: 100%;*/
     padding-top: 10vh;
     padding-left: 2vw;
     padding-right: 2vw;
     background-color: #BFBFB8;
-    box-shadow: -2px 0 5px rgba(0,0,0,0.3);
+/*    box-shadow: -2px 0 5px rgba(0,0,0,0.3);*/
     overflow-y: auto;
 }
 
