--- a/Views/Clientes/Index.cshtml
+++ b/Views/Clientes/Index.cshtml
@@ -22,38 +22,11 @@
 <body>
 
     <!-- barra superior     -->
-    <div class="borda_superior"></div>
-
-    @* <div class="botoes_line">
-        <!-- Botão para acessar clientes -->
-        <div class="botao" id="botao_clientes">
-            <img src="/images/user.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Clientes</p>
-        </div>
-
-        <!-- Botão para acessar pedidos -->
-        <div class="botao">
-            <img src="/images/order.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Pedidos</p>
-        </div>
-
-        <!-- Botão para acessar orçamentos -->
-        <div class="botao">
-            <img src="/images/budget.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Orçamento</p>
-        </div>
-
-        <!-- Botão para acessar materiais -->
-        <div class="botao">
-            <img src="/images/budget.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Materiais</p>
-        </div>
+    <div class="borda_superior">
+        <a class="style-botao-a" href="@Url.Action("Index", "Home")">
+            <div class="borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
+        </a>
     </div>
-
-
-    <!-- painel para os clientes -->
-    <div id="painel" class="painel">
-        <button class="fechar" id="fechar">X</button> *@
 
     <div class="painel_clientes">
 
@@ -105,43 +78,6 @@
         <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
         <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
 
-        @* <script>
-            $(document).ready(function () {
-                    $('#tabelaClientes').DataTable({
-                        "ajax": {
-                        "url": "/Clientes/GetClientes",
-                        "type": "GET",
-                        "dataSrc": "data",
-                        "layout": {
-                            "topStart": {
-                                "buttons": ['Editar', 'Remover']
-                            }
-                        }
-                    },
-                    "columns": [
-                        { "data": "Nome" },
-                        { "data": "CPF" },
-                        { "data": "Telefone" },
-                        { 
-                            "button": null,
-                            "orderable": false,
-                            "serchable": false,
-                            "render": function (data, type, row) {
-                                return `<button class="botao_datatable" onclick="editarCliente('${row.cpf}')">Editar</button>`;
-                            }
-                        },
-                        {
-                            "button": null,
-                            "orderable": false,
-                            "serchable": false,
-                            "render": function (data, type, row) {
-                                return `<button class="botao_datatable" onclick="removerCliente('${row.cpf}')">Remover</button>`;
-                            }
-                        }
-                    ]
-                });
-            });
-        </script> *@
     }
 </body>
 
