--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,34 +20,45 @@
 <body>
 
     <!-- barra superior     -->
-    <div class="borda_superior"></div>
+    <div class="borda_superior">
+        <a class="style-botao-a" href="@Url.Action("Index", "Home")">
+            <div class="borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
+        </a>
+    </div>
+
 
     <div class="botoes_line">
         <!-- Botão para acessar clientes -->
-        <a href="@Url.Action("Index", "Clientes")">
+        <a href="@Url.Action("Index", "Clientes")" , class="style-botao-a">
             <div class="botao" id="botao_cliente">
-                <img src="/images/user.png" alt="icone usuário" class="icons">
+                <img src="~/images/user.png" alt="icone usuário" class="icons">
                 <p class="text_botao">Clientes</p>
             </div>
         </a>
 
         <!-- Botão para acessar pedidos -->
-        <div class="botao">
-            <img src="/images/order.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Pedidos</p>
-        </div>
+        <a href="@Url.Action("Index", "Pedidos")" , class="style-botao-a">
+            <div class="botao" id="botao_cliente">
+                <img src="~/images/order.png" alt="icone pedido" class="icons">
+                <p class="text_botao">Pedidos</p>
+            </div>
+        </a>
 
         <!-- Botão para acessar orçamentos -->
-        <div class="botao">
-            <img src="/images/budget.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Orçamento</p>
-        </div>
+        <a href="@Url.Action("Index", "Pedidos")" , class="style-botao-a">
+            <div class="botao" id="botao_pedidos">
+                <img src="~/images/budget.png" alt="icone usuário" class="icons">
+                <p class="text_botao">Orçamento</p>
+            </div>
+        </a>
 
         <!-- Botão para acessar materiais -->
-        <div class="botao">
-            <img src="/images/budget.png" alt="icone usuário" class="icons">
-            <p class="text_botao">Materiais</p>
-        </div>
+        <a href="@Url.Action("Index", "Materiais")" , class="style-botao-a">
+            <div class="botao" id="botao_materiais">
+                <img src="~/images/budget.png" alt="icone pedido" class="icons">
+                <p class="text_botao">Materiais</p>
+            </div>
+        </a>
     </div>
 </body>
 
