--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -9,23 +9,53 @@
 
 .borda_superior {
     background-color: #4C594F;
+
     height: 12vh;
+    
     margin-bottom: 6vh;
+    padding-top: 3vh;
+    justify-content: left;  
 }
 
+.borda_superior_botao {
+    background-color: #BFBFB8;
+
+    border-radius: 6px;
+    width: 10vw;
+    height: 6vh;
+
+    text-align:center;
+    margin-left: 2vw;
+
+    padding-top: 3vh;
+}
+
+
+
 .botoes_line {
+    width: 100vw;
+    align-content: center;
     display: inline-flex;
+    justify-content: space-around;
+}
+
+.style-botao-a {
+    text-decoration: none;
+    color: black;
 }
 
 .botao {
-    height: 10vh;
-    width: 10vw;
+    height: 18vh;
+    width: 18vw;
+    
     background-color: #35403A;
     border: black, 1px;
     border-radius: 20px;
-    margin-left: 6vw;
+    
     align-content: center;
     text-align: center;
+    overflow:hidden;
+
     cursor: pointer;
 }
 
@@ -34,7 +64,7 @@
 }
 
 .icons {
-    height: 4vh;
+    height: 40%;
 }
 
 
@@ -63,7 +93,7 @@
 .painel_clientes {
 /*    width: 86vw;*/
 /*    height: 100%;*/
-    padding-top: 10vh;
+/*    padding-top: 10vh;*/
     padding-left: 2vw;
     padding-right: 2vw;
     background-color: #BFBFB8;
