--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -6,7 +6,6 @@
     padding: 0;
 }
 
-
 .borda_superior {
     background-color: #4C594F;
 
@@ -21,11 +20,12 @@
     background-color: #BFBFB8;
 
     border-radius: 6px;
-    width: 10vw;
+    width: 8vw;
     height: 6vh;
 
     text-align:center;
     margin-left: 2vw;
+    margin-right: 2vw;
 
     padding-top: 3vh;
 }
@@ -38,6 +38,8 @@
     display: inline-flex;
     justify-content: space-around;
 }
+
+
 
 .style-botao-a {
     text-decoration: none;
