Adicionada a pagina de orçamento

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -45,8 +45,8 @@
         </a>
 
         <!-- Botão para acessar orçamentos -->
-        <a href="@Url.Action("Index", "Pedidos")" , class="style-botao-a">
-            <div class="botao" id="botao_pedidos">
+        <a href="@Url.Action("Index", "Orcamento")" , class="style-botao-a">
+            <div class="botao" id="botao_orcamentos">
                 <img src="~/images/budget.png" alt="icone usuário" class="icons">
                 <p class="text_botao">Orçamento</p>
             </div>
