--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -185,3 +185,15 @@
 .tabela_selecao_materiais {
     width: 49%;
 }
+
+.campos-vidros {
+    width:20%;
+}
+
+.campos-vidros {
+    width: 15%;
+    height:25vh;
+}
+
+.campos-vidros-tabela {
+}
