--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -6,15 +6,6 @@
     var materiais = ViewBag.Materiais as List<Material>;
 }
 
-
-<label>Cliente</label>
-<select id="clienteCPF">
-    @foreach (var c in ViewBag.Clientes as List<Cliente>)
-    {
-        <option value="@c.CPF">@c.Nome (@c.CPF)</option>
-    }
-</select>
-
 <html>
 <head>
     <meta charset="UTF-8">
@@ -35,11 +26,25 @@
             <div class="borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
         </a>
     </div>
+    <br />
 
     <div class="formulario">
+        
+
         <div>
-            <div class="tabela_selecao">
+
+            <div class="tabela_selecao_vidros">
+                
+                
                 <div class="campos-vidros">
+
+                    <select id="clienteCPF">
+                        @foreach (var c in ViewBag.Clientes as List<Cliente>)
+                        {
+                        <option value="@c.CPF">@c.Nome (@c.CPF)</option>
+                        }
+                        </select>
+
                     <select id="VidroId" onchange="atualizarCampos(), atualizarPrecoVidro()">
                         @foreach (var m in ViewBag.Material as List<Material>)
                         {
@@ -83,13 +88,13 @@
 
                     <label class="texto-form">Preço</label>
                     <input id="preco-input" class="input-box texto-form" type="text" name="preco-input" readonly />
-                     
-                    <br />    
+
+                    <br />
 
                     <button class="btn-add-vidro">Adicionar</button>
                 </div>
 
-                
+
 
                 <div class="campos-vidros-tabela">
                     <div class="tabela_selecao">
@@ -120,8 +125,52 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
+        </div>
+
+        <div>
+            <div class="tabela_selecao">
+                <div>
+                    <label class="texto-form">Valor do Box</label>
+                    <input id="box-input" class="input-box texto-form" type="number"
+                           step="0.50" min_value="0.00" name="box-input" onchange="recalculaTotal()" />
+                </div>
+
+                <div>
+                    <label class="texto-form">Valor do Silicone</label>
+                    <input id="silicone-input" class="input-box texto-form" type="number"
+                           step="0.50" min_value="0.00" name="silicone-input" onchange="recalculaTotal()" />
+                </div>
+
+                <div>
+                    <label class="texto-form">Valor do Gasolina</label>
+                    <input id="gasolina-input" class="input-box texto-form" type="number"
+                           step="0.50" min_value="0.00" name="gasolina-input" onchange="recalculaTotal()" />
+                </div>
+            </div>
+
+            <br />
+
+            <div class="tabela_selecao">
+                <div>
+                    <label class="texto-form">Local de instalação</label>
+                    <input id="instalacao-input" class="input-box texto-form" type="text" name="instalacao-input" />
+                </div>
+
+                <div>
+                    <label class="texto-form">Observações</label>
+                    <input id="obs-orcamento-input" class="input-box texto-form" type="text" name="obs-orcamento-input" />
+                </div>
+
+                <div>
+                    <label class="texto-form">Parecelas</label>
+                    <input id="parcelas-input" class="input-box texto-form" type="number"
+                           step="1" min="1" name="parcelas-input" onchange="recalculaTotal()" value="1" />
+
+                </div>
+            </div>
+
         </div>
 
         <div>
@@ -168,11 +217,13 @@
             </div>
         </div>
         <br />
-        <p>Total: <span id="valorTotal">0.00</span></p>
+        <p>Custo: <span id="valorTotal">0.00</span></p>
+        <p>Valor Total: <span id="valor-total-pct">0.00</span></p>
+        <p>Valor Parcela: <span id="valor-total-parcela">0.00</span></p>
 
         <br />
         <button id="btnSalvar" data-save-url="@Url.Action("Salvar", "Orcamento")">Salvar Orçamento</button>
-
+        @* adicionar campos no banco de dados para o custo, valor total, gasolina, silicone, box.  *@
     </div>
 
 
