--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -188,15 +188,15 @@
 }
 
 .campos-vidros {
-    width:20%;
+    width:22%;
 }
 
 .campos-vidros {
-    width: 15%;
     height:25vh;
 }
 
 .campos-vidros-tabela {
+    45%
 }
 
 .tabela_selecao_vidros {
