--- a/Views/Pedidos/VisualizaPedido.cshtml
+++ b/Views/Pedidos/VisualizaPedido.cshtml
@@ -155,7 +155,7 @@
                     @id = "valor-pago-input", 
                     @class = "valor-pago-input input-box texto-form", 
                     type = "number", 
-                    step = "0.50", 
+                    step = "0.01", 
                     min = "0", 
                     value = Model.ValorPago.ToString(CultureInfo.InvariantCulture),
                     onchange = "calculaValorParcela()"
@@ -172,6 +172,7 @@
                         <th>Altura</th>
                         <th>Largura</th>
                         <th>Cor</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -185,6 +186,11 @@
                             <td>@item.Altura</td>
                             <td>@item.Largura</td>
                             <td>@item.Cor</td>
+                            <td>
+                            <a class="hyperlink_tabela" href="@Url.Action("DeleteVidro", "Pedidos", new { id = item.Id })">
+                                    <div class="botao_tabela">Remover</div>
+                                </a>
+                            </td>
                         </tr>
                     }
                     @foreach (var item in Model.Itens)
@@ -197,6 +203,11 @@
                             <td></td>
                             <td></td>
                             <td>@item.Material?.Cor</td>
+                            <td>
+                                <a class="hyperlink_tabela" href="@Url.Action("DeleteItem", "Pedidos", new { id = item.Id })">
+                                    <div class="botao_tabela">Remover</div>
+                                </a>
+                            </td>
                         </tr>
                     }
                 </tbody>
