Funções de calculos de valores corrigidas

--- a/Views/Orcamento/Index.cshtml
+++ b/Views/Orcamento/Index.cshtml
@@ -224,6 +224,14 @@
         <br />
         <button id="btnSalvar" data-save-url="@Url.Action("Salvar", "Orcamento")">Salvar Orçamento</button>
         @* adicionar campos no banco de dados para o custo, valor total, gasolina, silicone, box.  *@
+
+        <script>
+                window.onload = function () {
+                atualizarCampos();
+                atualizarPrecoVidro();
+            };
+            
+        </script>
     </div>
 
 
