--- a/Views/Pedidos/VisualizaPedido.cshtml
+++ b/Views/Pedidos/VisualizaPedido.cshtml
@@ -66,7 +66,7 @@
 
             <br />
             @* local instalação *@
-            @Html.LabelFor(model => model.LocalInstalacao, htmlAttributes: new { @class = "instalacao texto-form" })
+            <label class="texto-form">Local de instalação</label>
 
             <br />
             @Html.EditorFor(model => model.LocalInstalacao, new { htmlAttributes = new { @class = "instalacao-input input-box texto-form" } })
@@ -103,15 +103,15 @@
             <br />
 
             @* parcelas pagas *@
-            @Html.LabelFor(model => model.ParcelasPagas, htmlAttributes: new { @class = "parcelas-pagas texto-form" })
-
+            <label class="texto-form">Parcelas pagas</label>
+            
             <br />
             @Html.EditorFor(model => model.ParcelasPagas, new {
                 htmlAttributes = new {
                     id = "parcelas-pagas-input",
                     @class = "parcelas-pagas-input input-box texto-form",
                     type = "number",
-                    min = "1",
+                    min = "0",
                     onchange = "calculaValorParcela()",
                     onblur = "calculaValorParcela()"
                 }
@@ -122,45 +122,57 @@
             @Html.LabelFor(model => model.Gasolina, htmlAttributes: new { @class = "gasolina-pagas texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.Gasolina, new { htmlAttributes = new { @class = "gasolina-input input-box texto-form" } })
+            @Html.EditorFor(model => model.Gasolina, new { htmlAttributes = new { @class = "gasolina-input input-box texto-form", onchange = "reduzTotal()" } })
             <br />
 
             @* Silicone *@
             @Html.LabelFor(model => model.Silicone, htmlAttributes: new { @class = "silicone-pagas texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.Silicone, new { htmlAttributes = new { @class = "silicone-pagas-input input-box texto-form"} })
+            @Html.EditorFor(model => model.Silicone, new { htmlAttributes = new { @class = "silicone-pagas-input input-box texto-form", onchange = "reduzTotal()" } })
             <br />
 
             @* Box *@
             @Html.LabelFor(model => model.Box, htmlAttributes: new { @class = "box-pagas texto-form" })
 
             <br />
-            @Html.EditorFor(model => model.Box, new { htmlAttributes = new { @class = "box-pagas-input input-box texto-form" } })
+            @Html.EditorFor(model => model.Box, new { htmlAttributes = new { @class = "box-pagas-input input-box texto-form", onchange = "reduzTotal()" } })
             <br />
 
             @* Valor Parcelas *@
-            @Html.LabelFor(model => model.ValorParcelas, htmlAttributes: new { @class = "valor-parcelas texto-form" })
-
+            <label class="texto-form">Valor Parcelas</label>
             <br />
             @Html.EditorFor(model => model.ValorParcelas, new { htmlAttributes = new {@id= "valor-parcelas-input", @class = "valor-parcelas-input input-box texto-form" } })
             <br />
 
-            @* Valor Pago*@
-            @Html.LabelFor(model => model.ValorPago, htmlAttributes: new { @class = "valor-pago texto-form", onchange = "calculaValorParcela()"})
+            <div class="form-group" style="display: flex; gap: 10px; align-items: center;">
+                <!-- Campo Valor Pago -->
+                <div>
+                    <label class="texto-form">Valor Pago</label>
+                    <br />
+                    @Html.TextBoxFor(model => model.ValorPago, new {
+                        @id = "valor-pago-input",
+                        @class = "valor-pago-input input-box texto-form",
+                        type = "number", step = "0.01", min = "0",
+                        value = Model.ValorPago.ToString(CultureInfo.InvariantCulture),
+                        onchange = "calculaValorParcela()" 
+                    })
+                </div>
 
-            <br />
-            @Html.TextBoxFor(model => model.ValorPago, 
-                new { 
-                    @id = "valor-pago-input", 
-                    @class = "valor-pago-input input-box texto-form", 
-                    type = "number", 
-                    step = "0.01", 
-                    min = "0", 
-                    value = Model.ValorPago.ToString(CultureInfo.InvariantCulture),
-                    onchange = "calculaValorParcela()"
-                })
-            <br />
+                <!-- Campo Adicionar Valor -->
+                <div>
+                    <label for="adicionar-valor" class="texto-form">Adicionar Valor</label>
+                    <br />
+                    <input type="number" id="adicionar-valor" 
+                           class="input-box texto-form" 
+                           step="0.01" min="0" value="0" />
+                </div>
+
+                <!-- Botão Somar -->
+                <div>
+                    <button type="button" class="btn btn-success" onclick="somarValor()">Adicionar</button>
+                </div>
+            </div>
 
             <table id="tabelaItens" class="table">
                 <thead>
@@ -227,6 +239,15 @@
                 <a href="@Url.Action("EditarCliente", "Clientes", new { cpf = @Model.CPF })" class="btn btn-warning rounded-pill px-4">Editar</a>
             </div> *@
         }
+
+
+
+        <script>window.onload = function () {
+            reduzTotal();
+            atualizarCampos();
+            calculaValorParcela();
+        };
+        </script>
     </div>
 
 </body>
