--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -22,14 +22,14 @@
     <!-- barra superior     -->
     <div class="borda_superior">
         <a class="style-botao-a" href="@Url.Action("Index", "Home")">
-            <div class="borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
+            <div class="botao borda_superior_botao"><p class="texto_botao_borda_superior">Home</p></div>
         </a>
     </div>
 
 
     <div class="botoes_line">
         <!-- Botão para acessar clientes -->
-        <a href="@Url.Action("Index", "Clientes")" , class="style-botao-a">
+        <a href="@Url.Action("Index", "Clientes")", class="style-botao-a">
             <div class="botao" id="botao_cliente">
                 <img src="~/images/user.png" alt="icone usuário" class="icons">
                 <p class="text_botao">Clientes</p>
